selfhost/test/typechecker/import/error_duplicate_variable_name.1.out
Error at %FILE_NAME%:3:5
Duplicate name 'a'
  |  val a = "foo"
         ^
This name is also declared at (1:8)
  |  import a from "./_exports"
            ^
