selfhost/test/typechecker/import/error_duplicate_variable_name.2.abra
import a from "./_exports"

func a() {}
